style.css
@import "normalize.css";

*, *:before, *:after {
  -webkit-box-sizing: border-box;
  -moz-box-sizing: border-box;
  box-sizing: border-box;
}

/* Colors from http://flatuicolors.com */
/* midnight-blue = #2c3e50 */
/* belize-hole = #2980b9 */
/* silver = #bdc3c7 */
/* asbestos = #95a5a6 */

body {
  font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif;
  font-size: 16px;
  line-height: 1.5em;

  color: #2c3e50;
}

article {
  padding: 1.5em 1em;
  max-width: 800px;
  margin: 0 auto;
}

@media (max-width: 700px) {
  body {
    font-size: 14px;
  }
}

@media print {
  body {
    font-size: 13px;
  }

  article {
    padding: 1em;
  }

  .hide-print {
    display: none;
  }
}

a,
a:focus,
a:visited,
a:hover {
  color: #2980b9;
}

.muted {
  color: #bdc3c7;
}

.muted #date,
.muted a {
  color: #95a5a6;
}

.inline {
  display: inline-block;
}

h1, h2, h3 {
  margin: 0;
}

h2.inline {
  font-size: 1.5em;
  line-height: 2em;
  border: none;
  height: 2em;
}

h1, h2 {
  letter-spacing: 0.1em;
  font-variant: small-caps;
  font-weight: 300;
  letter-spacing: 1px;
}

h3 a {
  font-weight: 400;
}

h2 {
  font-size: 1.2em;
  line-height: 1.25em;
  height: 1.25em;
  border-bottom: 1px solid #2c3e50;
}

h3 {
  font-size: 1.0em;
  line-height: 1.5em;
  margin-top: 1.5em;
}

section, p {
  margin: 1.5em 0;
}

article section:first-of-type,
section p:first-of-type,
section h3:first-of-type {
  margin-top: 0;
}

article section:last-of-type,
article section:last-of-type p:last-of-type {
  margin-bottom: 0;
}

ul {
  margin: 0;
  padding-left: 1.25em;
}

.columns {
  width: 100%;
  position: relative;
}

.columns div:nth-child(1) {
  position: absolute;
  left: 0;
  top: 0;
}

.columns div:nth-child(2) {
  width: 100%;
  margin: 0 auto;
  text-align: center;
}

.columns div:nth-child(3) {
  position: absolute;
  right: 0;
  top: 0;
  text-align: right;
}

@media (max-width: 700px) {
  .columns div:nth-child(1),
  .columns div:nth-child(2),
  .columns div:nth-child(3) {
    width: 100%;
    position: static;
    text-align: left;
  }
}

hr {
  border: none;
  margin: 0;
  margin-top: 1.5em;
}

#last-updated {
  opacity: 0;
  -webkit-transition: opacity 0.3s ease;
  -moz-transition: opacity 0.3s ease;
  transition: opacity 0.3s ease;
}

#last-updated.ready {
  opacity: 1;
}

